add a simple fucntion to file upload
