# server/docs/swagger.json
@@ -170,6 +170,40 @@
                     }
                 }
             }
+        },
+         "/image": {
+            "post": {
+                "summary": "image upload",
+                "requestBody":{
+                        "description": "Image upload",
+                        "required": true,
+                         "content": {
+                            "multipart/form-data": {
+                            "schema": {
+                                "type": "object",
+                                "properties": {
+                                "file": {
+                                    "type": "string",
+                                    "format": "binary"
+                                    }
+                                }
+                            }
+                            }
+                        }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Image upload Successfully"
+                         
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "500":{
+                        "description": "Internal Server"
+                    }
+                }
+            }
         }
     },
 
